Fix about section text alignment to left so paragraph under image is not centered for desktop layout

--- a/css/main.css
+++ b/css/main.css
@@ -854,6 +854,7 @@ footer {
 
     .about-text-container p {
         margin-bottom: 1rem;
+        text-align: left;
     }
   
     .about-section img {
